--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #000;
+    color: black;
 }
 header {
     background-color: #004080;
