--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #000;
-    color: black;
+    background-color: #f4f4f4;
+    color: #000;
 }
 header {
     background-color: #004080;
